# ndsmusicplayer-ao

./: .gitignore  .gitignore~  CMakeLists.txt  MIRRORS.org  MIRRORS.org~  Makefile  RAPE  README.md  README.org  TODO.org  color.cpp  color.h  common.h  corlett.c  corlett.h  dump_main.c  libao.c  libao.h  main.c  oss.c  tagget.h  test.2sf  vio2play  vio2sf.txt  xsf_player.c  xsf_player.h
cmake/: FindLibAO.cmake
debian/: README.Debian  README.source  changelog  control  copyright  docs  rules
debian/patches/: debian-changes-2.8-1  series
vio2sf/: vio2sf.c
